# odysseus

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc.json  CMakeLists.txt  Cargo.toml  PrivacyPolicy.md  README.md  TODO.md  TermsAndConditions.md  about.go  build.go  commands.go  commands.json  damagecalc.go  eslint.config.mjs  events.go  go.mod  go.sum  help.go  item.go  items.json  latency.go  main.go  package-lock.json  package.json  ping.go  pingset.go  query.sql  schema.sql  seyfert.config.mjs  sort.go  tsconfig.json  utils.go  weapons.go  weapons.json
.github/: FUNDING.yml
.zed/: settings.json
cmd/odysseus/: main.go
data/: enchants.yaml  gems.yaml  items.json  items.yaml  magics.json  magics.yaml  modifiers.yaml  ship.yaml  weapons.json  weapons.yaml
db/: models.go  query.sql.go
go/: damagecalc.go  events.go  go.sum  models.go  ping.go  query.sql  query.sql.go  sort.go  sqlc.yaml  utils.go  wiki.go
src/: database.rs  events.rs  index.ts  item_interactions.rs  main.cpp  main.rs  modal_interactions.rs  models.rs  utils.rs
src/commands/: about.rs  about.ts  build.rs  damagecalc.rs  help.rs  item.rs  item.ts  items.json  latency.rs  magic.rs  mod.rs  ping.rs  ping.ts  pingset.rs  sort.rs  weapon.rs  weapons.json  wiki.rs
src/components/: item_select_enchant.ts  item_select_modifier.ts  item_set_enchant.ts  item_set_gems.ts  item_set_gems_back.ts  item_set_modifier.ts
src/constants/: embed.ts  global.ts  index.ts  items.ts  stats.ts
src/data/: load.js  load.ts
src/events/: botReady.ts
src/types/: data.d.ts  index.d.ts  item.d.ts  seyfert.d.ts
src/utils/: index.ts  item.ts  reference_code.temp.md  stats.ts
