[package]
name = "odysseus"
authors = ["Hongmeng Zhai <zhaihongmeng@gmail.com>"]
version = "0.4.0"
edition = "2021"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
  "cache",
  "client",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "utils",
  "rustls_backend",
] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
  "migrate",
], default-features = false }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
urlencoding = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
scraper = "0.24"
regex = "1.12"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.19"
parking_lot = "0.12"
